network/vpc.tf
resource "aws_vpc" "main" {
  cidr_block = var.vpccidr

  tags = {
    Name = "mainvpciti"
  }
}
